fixed: layout overflow

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,12 +1,11 @@
 ::-webkit-scrollbar{
     inline-size: .5rem;
     block-size: .5rem;
-}
-::-webkit-scrollbar-button{
-}
-::-webkit-scrollbar-thumb{
-    background:var(--gray20);
-}
-::-webkit-scrollbar-track{
-    background:var(--gray20);
-}
+  
+  }
+  ::-webkit-scrollbar-thumb{
+    background: var(--gray60);
+  }
+  ::-webkit-scrollbar-track{
+    background: var(--gray50);
+  }
